♻️ [工作流] 代办任务列表查询修改查询用户ID列表和去掉查询任务参数
(cherry picked from commit 84e0116e9bce2725dcd20274c4faf1872f7c86fe)